# TinyHttp

./: CMakeLists.txt  README.md  main  main.cpp  makefile  test  test.cpp  xclient.cpp  xhttp.cpp  xhttp.h
docs/: PRD.md  bugs.md
template/: xyq.html
template/css/: style.css
template/html/: xyq.html  xyq1.html
xServer/: CMakeLists.txt  makefile  xServer.cpp  xServer.h
xServer/include/: xServer.h  xhttp_connect.h  xhttp_request.h  xhttp_response.h  xyq.h
xServer/src/: xServer.cpp  xhttp_connect.cpp  xhttp_request.cpp  xhttp_response.cpp  xyq.cpp
xyq/: makefile  xyq.cpp  xyq.h
